# cpp3ds

./: .build-deps.sh  .build.sh  .deploy-prepare.sh  .gitignore  .travis-build.sh  .travis-deps.sh  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
cmake/: FindCTRULIB.cmake  FindFaad.cmake  FindFreetype.cmake  FindTremor.cmake  arm-toolchain.cmake  cmake_uninstall.cmake  cpp3ds.cmake  gresource.cmake
cmake/arm/: CMakeLists.txt
cmake/emu/: CMakeLists.txt
cmake/sim/: CMakeLists.txt
cmake/template_arm/: CMakeLists.txt
cmake/template_emu/: CMakeLists.txt
cmake/test/: CMakeLists.txt
doc/: .gitignore  CMakeLists.txt  doxyfile.in  doxygen.css  footer.htm  header.htm  mainpage.hpp
docs/: Doxyfile  Makefile  conf.py  index.rst  make.bat
examples/: cpp3ds.ld
examples/gateway/: CMakeLists.txt  Makefile
examples/gateway/src/: gateway.cpp
include/cpp3ds/: Audio.hpp  BottomScreen.h  Color.h  Config.hpp  Display.h  Drawable.h  Emulator.hpp  Graphics.hpp  Input.h  Network.hpp  OpenGL.hpp  Resources.hpp  Scene.h  Screen.h  Simulator.hpp  Stage.h  System.hpp  TopScreen.h  Window.hpp  utils.h
include/cpp3ds/Audio/: AlResource.hpp  InputSoundFile.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileReaderAAC.hpp  SoundFileReaderOgg.hpp  SoundFileReaderWav.hpp  SoundFileWriter.hpp  SoundFileWriterOgg.hpp  SoundFileWriterWav.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
include/cpp3ds/Emulator/: Emulator.hpp  SFMLWidget.hpp
include/cpp3ds/Graphics/: Actor.hpp  Billboard.hpp  BlendMode.hpp  Box.hpp  Box.inl  Camera.hpp  CircleShape.hpp  Color.hpp  Console.hpp  ConvexPolyhedron.hpp  ConvexShape.hpp  Cuboid.hpp  Drawable.hpp  Font.hpp  Glyph.hpp  Image.hpp  ImageLoader.hpp  Light.hpp  Model.hpp  Polyhedron.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  Rectangle.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTarget.inl  RenderTexture.hpp  Shader.hpp  Shape.hpp  SphericalPolyhedron.hpp  Sprite.hpp  Stage.hpp  Text.hpp  Texture.hpp  TextureSaver.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  (+5 more)
include/cpp3ds/Network/: Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketImpl.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
include/cpp3ds/OpenGL/: GLCheck.hpp  GLExtensions.hpp
include/cpp3ds/Simulator/: SFMLWidget.hpp  Simulator.hpp
include/cpp3ds/System/: Clock.hpp  Err.hpp  FileInputStream.hpp  FileSystem.hpp  I18n.hpp  InputStream.hpp  LinearAllocator.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NonCopyable.hpp  Service.hpp  Sleep.hpp  String.hpp  String.inl  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  utils.hpp  utils_emu.hpp
include/cpp3ds/Window/: BottomScreen.hpp  BottomScreen_emu.hpp  BottomScreen_sim.hpp  Context.hpp  ContextSettings.hpp  Display.hpp  Event.hpp  EventManager.hpp  Game.hpp  (+18 more)
include/sim3ds/: BottomScreen.h  Input.h  Screen.h  TopScreen.h  utils.h
res/core_resource/: default_shader.vsh
res/emu/: emulator.qrc  emulator.ui
res/sim/: emulator.qrc  emulator.ui  simulator.glade  simulator.gresource.xml
scripts/: aemstro_as.py  res_compile.py  sendfile.py
sim/: Display.cpp  Input.cpp  SFMLWidget.cpp  Scene.cpp  Screen.cpp  Simulator.cpp  TopScreen.cpp  sim.cpp  utils.cpp
src/: CMakeLists.txt  Input.cpp  Scene.cpp  Screen.cpp  Stage.cpp  TopScreen.cpp  cpp3ds-crt0.S  cpp3ds-crt0.s  syscalls.cpp  utils.cpp
src/actors/: Actor.cpp  Rectangle.cpp  Text.cpp
src/cpp3ds/: CMakeLists.txt  cpp3ds-crt0.S  cpp3ds.cpp  syscalls.cpp
src/cpp3ds/Audio/: AlResource.cpp  CMakeLists.txt  InputSoundFile.cpp  Music.cpp  OutputSoundFile.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFileFactory.cpp  SoundFileReaderAAC.cpp  SoundFileReaderOgg.cpp  SoundFileReaderWav.cpp  SoundFileWriterOgg.cpp  SoundFileWriterWav.cpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/cpp3ds/Graphics/: Actor.cpp  Billboard.cpp  BlendMode.cpp  CMakeLists.txt  Camera.cpp  CircleShape.cpp  CitroHelpers.cpp  CitroHelpers.hpp  Color.cpp  Console.cpp  ConvexPolyhedron.cpp  ConvexShape.cpp  Cuboid.cpp  Font.cpp  GLCheck.cpp  GLExtensions.cpp  Image.cpp  ImageLoader.cpp  Light.cpp  Model.cpp  Polyhedron.cpp  Rectangle.cpp  RectangleShape.cpp  RenderStates.cpp  RenderTarget.cpp  RenderTexture.cpp  Shader.cpp  Shape.cpp  SphericalPolyhedron.cpp  Sprite.cpp  Stage.cpp  Text.cpp  Texture.cpp  TextureSaver.cpp  Transform.cpp  Transformable.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexContainer.cpp  (+1 more)
src/cpp3ds/Network/: CMakeLists.txt  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.cpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
src/cpp3ds/System/: CMakeLists.txt  Clock.cpp  Err.cpp  FileInputStream.cpp  FileSystem.cpp  I18n.cpp  Lock.cpp  MemoryInputStream.cpp  Mutex.cpp  Service.cpp  Sleep.cpp  String.cpp  Thread.cpp  ThreadLocal.cpp  Time.cpp  utils.cpp
src/cpp3ds/Window/: CMakeLists.txt  Context.cpp  Display.cpp  Event.cpp  EventManager.cpp  Game.cpp  GlContext.cpp  GlResource.cpp  Input.cpp  Keyboard.cpp  Scene.cpp  Screen.cpp  Sensor.cpp  TopScreen.cpp  Window.cpp
src/emu3ds/: CMakeLists.txt  emu3ds.cpp
src/emu3ds/Audio/: ALCheck.cpp  ALCheck.hpp  AlResource.cpp  AudioDevice.cpp  AudioDevice.hpp  InputSoundFile.cpp  Sound.cpp  SoundBuffer.cpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/emu3ds/Emulator/: Emulator.cpp  SFMLWidget.cpp
src/emu3ds/Graphics/: RenderTarget.cpp  Shader.cpp  Transform.cpp
src/emu3ds/Network/: Http.cpp  Socket.cpp
src/emu3ds/System/: Clock.cpp  Mutex.cpp  Service.cpp  Thread.cpp  utils.cpp
src/emu3ds/Window/: Display.cpp  EventManager.cpp  Game.cpp  GlContext.cpp  GlResource.cpp  Input.cpp  Keyboard.cpp  Scene.cpp  Screen.cpp  TopScreen.cpp  Window.cpp
src/sim3ds/: sim3ds.cpp
test/: CMakeLists.txt  main.cpp  run.sh
(+18 files in other folders)
